BIG UPDATE loads of changes (for the better)

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
             <label for="slider_B" id="slider_B_label"></label>
             <input class="sliders" type="range" id="slider_B" min="1" max="80">
         </div>
-        <script src="main.js"></script>
+        <script type="module" src="main.js"></script>
     </body>
 </html>
