--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
     </head>
     <body>
         <h1>Simple Boids</h1>
-        <canvas id="display" width="750" height="750"></canvas>
-        <div class="sliders_box">
-            <p>Speed</p>
-            <label for="slider_V" id="slider_V_label"></label>
-            <input class="sliders" type="range" id="slider_V" min="1" max="40">
-            <p>Cohesion</p>
-            <label for="slider_C" id="slider_C_label"></label>
-            <input class="sliders" type="range" id="slider_C" min="0" max="10">
-            <p>Alignment</p>
-            <label for="slider_A" id="slider_A_label"></label>
-            <input class="sliders" type="range" id="slider_A" min="0" max="10">
-            <p>Separation</p>
-            <label for="slider_S" id="slider_S_label"></label>
-            <input class="sliders" type="range" id="slider_S" min="0" max="10">
-            <p>Boid Count</p>
-            <label for="slider_B" id="slider_B_label"></label>
-            <input class="sliders" type="range" id="slider_B" min="1" max="80">
+        <div id="main">
+            <canvas id="display" width="750" height="750"></canvas>
+            <div class="sliders_box">
+                <p>Speed</p>
+                <input class="sliders" type="range" id="slider_V" min="1" max="40">
+                <label for="slider_V" id="slider_V_label"></label>
+                <p>Cohesion</p>
+                <input class="sliders" type="range" id="slider_C" min="0" max="10">
+                <label for="slider_C" id="slider_C_label"></label>
+                <p>Alignment</p>
+                <input class="sliders" type="range" id="slider_A" min="0" max="10">
+                <label for="slider_A" id="slider_A_label"></label>
+                <p>Separation</p>
+                <input class="sliders" type="range" id="slider_S" min="0" max="10">
+                <label for="slider_S" id="slider_S_label"></label>
+                <p>Boid Count</p>
+                <input class="sliders" type="range" id="slider_B" min="1" max="80">
+                <label for="slider_B" id="slider_B_label"></label>
+            </div>
         </div>
         <script type="module" src="main.js"></script>
     </body>
