--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
+        <meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
         <title>Simple Boids</title>
         <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
