--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <h2>Boid Applications</h2>
             <ul>
                 <li><a href="monster.html">Feed The Monster</a> - interactive display where you direct a monster towards its food</li>
+                <li><a href="hunter_prey.html">Power In Numbers</a> - Two teams of boids try to hunt one another if they outnumber their prey</li>
             </ul>
         </div>
         <script type="module" src="index/index_script.js"></script>
