--- a/hunter_prey.html
+++ b/hunter_prey.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
     <head>
         <meta name="viewport" content="width=device-width">
@@ -6,7 +5,7 @@
         <link href="application.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <h1>Feed The Monster</h1>
+        <h1>Power In Numbers</h1>
         <div id="main">
             <div id="left-side">
                 <ul>
@@ -19,6 +18,6 @@
             </div>
             <canvas id="display" width="620" height="620"></canvas>
         </div>
-        <script type="module" src="monster/monster_script.js"></script>
+        <script type="module" src="hunter_prey/hunter_prey.js"></script>
     </body>
 </html>
